--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "simplechain",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Udacity private blockchain project",
   "main": "simpleChain.js",
   "dependencies": {
     "chai": "^4.2.0",
     "crypto-js": "^3.1.9-1",
+    "express": "^4.16.4",
+    "hapi": "^17.6.0",
     "level": "^4.0.0",
     "leveldown": "^4.0.1",
     "levelup": "^3.1.1",
@@ -13,7 +15,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Fernando Bonilla",
   "license": "MIT",
